<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Reclamator</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="new_button">New entry</string>
    <string name="title_activity_new">New Entry</string>
    <string name="company_hint">Company</string>
    <string name="problem_hint">Problem</string>
    <string name="operator_hint">Operator</string>
    <string name="protocol_hint">Protocol</string>
    <string name="observations_hint">Observations</string>
    <string name="save_button">Save</string>
    <string name="title_activity_problems">Problems</string>
    <string name="title_activity_entries">Entries</string>
    <string name="delete_dialog_title">Delete this entry?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="empty_field">There is an empty field</string>
    <string name="title_activity_entry_desc">Entry</string>
    <string name="time_hint">Date - Hour</string>
    <string name="entry_error">Unable to get entry\'s information</string>
    <string name="cancel">Go back without saving?</string>
    <string name="search_action">Search</string>
	<string name="title_activity_search">Search Results</string>
    <string name="empty_list">Tap the \'New Entry\' icon to create a new entry</string>
    <string name="no_search_results">The search performed didn\'t return any results</string>
    <string name="company_name_hint">Name</string>
    <string name="company_phone_hint">Phone Number</string>
    <string name="company_email_hint">Email</string>
    <string name="company_address_hint">Address</string>
    <string name="company_website_hint">Website</string>
	<string name="title_activity_registered_companies">Companies</string>
	<string name="title_activity_company_desc">Company</string>
    <string name="registered_companies">Registered Companies</string>
    <string name="title_activity_register_company">Register Company</string>
    <string name="name_already_registered">The company name is already registered</string>
    <string name="company_error">Unable to get company\'s information</string>
    <string name="company_info">Company info</string>

</resources>
