<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:tools="http://schemas.android.com/tools"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="@dimen/activity_padding"
			android:background="@color/bg_color"
			tools:context=".CompanyDescActivity">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/company_name_hint"
			android:textSize="14sp"
			android:textColor="@color/text"
			android:id="@+id/name_label"
			android:paddingBottom="3dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="15dp"
			android:paddingEnd="0dp"
			android:paddingRight="0dp"
			android:textSize="14sp"
			android:textColor="@color/text"
			android:id="@+id/name_value"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:layout_toRightOf="@+id/name_label"
			android:layout_toEndOf="@+id/name_label"
			android:gravity="end"
			android:paddingBottom="3dp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/company_phone_hint"
			android:textSize="14sp"
			android:textColor="@color/text"
			android:id="@+id/phone_label"
			android:layout_below="@+id/name_value"
			android:paddingBottom="3dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="15dp"
			android:paddingEnd="0dp"
			android:paddingRight="0dp"
			android:textSize="14sp"
			android:textColor="@color/text"
			android:id="@+id/phone_value"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:layout_toRightOf="@+id/phone_label"
			android:layout_toEndOf="@+id/phone_label"
			android:gravity="end"
			android:layout_below="@+id/name_value"
			android:paddingBottom="3dp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/company_email_hint"
			android:textSize="14sp"
			android:textColor="@color/text"
			android:id="@+id/email_label"
			android:layout_below="@+id/phone_value"
			android:paddingBottom="3dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="15dp"
			android:paddingEnd="0dp"
			android:paddingRight="0dp"
			android:textSize="14sp"
			android:textColor="@color/text"
			android:autoLink="all"
			android:linksClickable="true"
			android:id="@+id/email_value"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:layout_toRightOf="@id/email_label"
			android:layout_toEndOf="@+id/email_label"
			android:gravity="end"
			android:layout_below="@+id/phone_value"
			android:paddingBottom="3dp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/company_address_hint"
			android:textSize="14sp"
			android:textColor="@color/text"
			android:id="@+id/address_label"
			android:layout_below="@+id/email_value"
			android:paddingBottom="3dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="15dp"
			android:paddingEnd="0dp"
			android:paddingRight="0dp"
			android:textSize="14sp"
			android:textColor="@color/text"
			android:id="@+id/address_value"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:layout_toRightOf="@id/address_label"
			android:layout_toEndOf="@+id/address_label"
			android:gravity="end"
			android:layout_below="@+id/email_value"
			android:paddingBottom="3dp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/company_website_hint"
			android:textSize="14sp"
			android:textColor="@color/text"
			android:id="@+id/website_label"
			android:layout_below="@+id/address_value"
			android:paddingBottom="3dp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="15dp"
			android:paddingEnd="0dp"
			android:paddingRight="0dp"
			android:textSize="14sp"
			android:autoLink="all"
			android:linksClickable="true"
			android:id="@+id/website_value"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:layout_toRightOf="@id/website_label"
			android:layout_toEndOf="@+id/website_label"
			android:gravity="end"
			android:layout_below="@+id/address_value"
			android:paddingBottom="3dp" />

	</RelativeLayout>

</ScrollView>
