<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_padding"
            android:background="@color/bg_color"
            tools:context=".EntryDescActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_hint"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:id="@+id/company_label"
            android:paddingBottom="3dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:id="@+id/company_value"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/company_label"
            android:layout_toEndOf="@+id/company_label"
            android:gravity="end"
            android:paddingBottom="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/problem_hint"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:id="@+id/problem_label"
            android:layout_below="@+id/company_value"
            android:paddingBottom="3dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:id="@+id/problem_value"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/problem_label"
            android:layout_toEndOf="@id/problem_label"
            android:gravity="end"
            android:layout_below="@+id/company_value"
            android:paddingBottom="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operator_hint"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:id="@+id/operator_label"
            android:layout_below="@+id/problem_value"
            android:paddingBottom="3dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:id="@+id/operator_value"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/operator_label"
            android:layout_toEndOf="@+id/operator_label"
            android:gravity="end"
            android:layout_below="@+id/problem_value"
            android:paddingBottom="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol_hint"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:id="@+id/protocol_label"
            android:layout_below="@+id/operator_value"
            android:paddingBottom="3dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:id="@+id/protocol_value"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@id/protocol_label"
            android:layout_toEndOf="@+id/protocol_label"
            android:gravity="end"
            android:layout_below="@+id/operator_value"
            android:paddingBottom="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observations_hint"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:id="@+id/observations_label"
            android:layout_below="@+id/protocol_value"
            android:paddingBottom="3dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:id="@+id/observations_value"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/observations_label"
            android:layout_toEndOf="@+id/operator_label"
            android:gravity="end"
            android:layout_below="@+id/protocol_value"
            android:paddingBottom="3dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textSize="14sp"
            android:textColor="@color/text"
            android:id="@+id/time_value"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:layout_below="@+id/observations_value"/>

    </RelativeLayout>

</ScrollView>
